# FASTEN

./: LICENSE.md  README.md  index.md  pyproject.toml
.github/workflows/: publish.yml
_site/: feed.xml  index.html
docs/: _config.yml  index.md
docs/_site/: feed.xml
src/FASTEN/: __init__.py  cli.py  common.py  config.py  data.py  estimate.py  learn.py  model.py  param.py  plot.py  predict.py  train.py  tune.py  utils.py
